# ChangeLog for dev-lang/ruby-enterprise
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  22 Jan 2009; Alex Legler <a3li@gentoo.org> +files/openssl.patch,
  +ruby-enterprise-1.8.6.20081205-r1.ebuild:
  Revbump to include openssl patch

  21 Dec 2008; Sergio D. Rodriguez Inclan (ZeRoX) <srinclan@gmail.com>
  ChangeLog:
  Added ~x86 keyword.

  11 Dec 2008; Alex Legler <gentoo@a3li.info>
  ruby-enterprise-1.8.6.20081205.ebuild:
  Removing double whitespace and DEPENDing on eselect-ruby

  10 Dec 2008; Alex Legler <gentoo@a3li.info> +files/libdir.patch,
  +files/mkconfig.patch, +ruby-enterprise-1.8.6.20081205.ebuild:
  Initial ebuild, done by myself.
