@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  15 Apr 2009; Alex Legler <a3li@gentoo.org>
+  +ruby-enterprise-1.8.6.20090201.ebuild:
+  Version bump including changes from ramereth's overlay.
+
   22 Jan 2009; Alex Legler <a3li@gentoo.org> +files/openssl.patch,
   +ruby-enterprise-1.8.6.20081205-r1.ebuild:
   Revbump to include openssl patch
